<resources>
    <string name="app_name">Tasks App</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="doneText">Done</string>
    <string name="toDoText">To Do</string>
    <string name="default_title">Title</string>
    <string name="default_description">Description</string>
    <string name="default_date">Date</string>
    <string name="placeholder">Placeholder</string>
    <string name="task_icon">Task icon</string>
    <string name="done_text">Task done</string>
    <string name="todo_text">Task not done</string>
    <string name="title_hint">Task title</string>
    <string name="description_hint">Task description</string>
    <string name="type_hint">Task type</string>
    <string name="add_button_text">Add task</string>
    <string name="status_placeholder">Status</string>
    <string name="description_placeholder">Description</string>
    <string name="date_placeholder">Date</string>
    <string name="title_placeholder">Title</string>

    <string-array name="task_type_array">
        <item>E-mail</item>
        <item>Phone</item>
        <item>Meeting</item>
        <item>To Do</item>
    </string-array>
</resources>