<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:layout_margin="@dimen/app_margin"
    android:theme="@style/AppTheme.NoActionBar">

    <Spinner
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/app_margin"
        android:autofillHints="@string/type_hint">

    </Spinner>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:layout_marginTop="@dimen/app_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="@dimen/app_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_marginTop="@dimen/app_margin"/>

    <Button
        android:id="@+id/save_button"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:hint="@string/add_button_text"
        android:textColorHint="#FFFFFF"/>


</androidx.constraintlayout.widget.ConstraintLayout>