<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/colorAccent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_heigh">

            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginStart="@dimen/image_margin_st"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/status_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/st_card_margin_t"
                android:layout_marginEnd="@dimen/st_card_margin_end"
                android:text="@string/status_placeholder"
                android:textSize="@dimen/status_size_txt"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="@dimen/dsc_width"
                android:layout_height="@dimen/dsc_height"
                android:text="@string/description_placeholder"
                android:textSize="@dimen/dsc_text_size"
                android:layout_marginTop="@dimen/margin_desc"
                app:layout_constraintStart_toStartOf="@+id/title_textview"
                app:layout_constraintTop_toBottomOf="@+id/title_textview" />

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_date"
                android:text="@string/date_placeholder"
                app:layout_constraintStart_toStartOf="@+id/description_textview"
                app:layout_constraintTop_toBottomOf="@+id/description_textview" />

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin_st"
                android:layout_marginTop="@dimen/title_margin_top"
                android:text="@string/title_placeholder"
                android:textSize="@dimen/title_size_txt"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/myImageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>